# OpenControlHead

./: .gitignore  LICENSE.md
apps/ui/: .gitignore  pyproject.toml  readme.md  resources_rc.py  run.ps1  run.py  run.sh
apps/ui/qml/: Main.qml  resources.qrc
apps/ui/qml/pages/: AirPage.qml  ClimatePage.qml  DebugPage.qml  DrivetrainPage.qml  HomePage.qml  LightsPage.qml  Logs.qml  NetworkPage.qml  PowerPage.qml  RadioPage.qml  SecurityPage.qml  SettingsPage.qml  SuspensionPage.qml  SystemPage.qml  TripPage.qml  VehiclePage.qml  WeatherPage.qml  WinchPage.qml
apps/ui/src/: app.py  effects.py  logging_setup.py  patterns.py  pcm.py  resources_rc.py  serial_worker.py  switches.py
docs/: pcm.md  todo.md
docs/CAN/: can.md
firmware/pico/: README.md  platformio.ini
firmware/pico/src/: main.cpp
hardware/4ch_pcm/: #auto_saved_files#  4ch_pcm.kicad_pcb  4ch_pcm.kicad_prl  4ch_pcm.kicad_pro  4ch_pcm.kicad_sch  _autosave-4ch_pcm.kicad_pcb  ~4ch_pcm.kicad_sch.lck
hardware/db10/: Component9.step  DB10.kicad_pcb  DB10.kicad_prl  DB10.kicad_pro  DB10.kicad_sch  DB10.step  fp-info-cache
hardware/db10/Library.pretty/: LED-APA102-2020.kicad_mod
hardware/db38/: APA102-2020.step  DB38.kicad_pcb  DB38.kicad_prl  DB38.kicad_pro  DB38.kicad_sch  TCA8418RTWR.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table  ~DB38.kicad_pcb.lck
hardware/db38/Library.pretty/: SolderWire-0.5sqmm_1x06_P4.8mm_D0.9mm_OD2.3mm.kicad_mod
hardware/db38/TCA8418/: QFN50P400X400X80-25N.kicad_mod
hardware/db38/TCA8418.pretty/: QFN50P400X400X80-25N.kicad_mod
